# convenant

./: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
app/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
app/e2e/: docs.spec.ts  home.spec.ts  mobile.spec.ts  navigation.spec.ts  proposal-flow.spec.ts  proposal-new.spec.ts  results.spec.ts
app/e2e/fixtures/: wallet.ts
app/src/: App.tsx
app/src/components/: CommitmentModal.tsx  CommunityCard.tsx  CountdownTimer.tsx  ExecutionTimeline.tsx  Navbar.tsx  ProposalCard.tsx  ResultsBoard.tsx
app/src/hooks/: useArciumEncryption.ts  useCommitment.ts  useCommunities.ts  useCreateCommunity.ts  useCreateProposal.ts  useJoinLeaveCommunity.ts  useProposal.ts  useTally.ts
app/src/idl/: covenant.json
app/src/pages/: Docs.tsx  Home.tsx
app/src/pages/Community/: [id].tsx  new.tsx
app/src/styles/: covenant.css  globals.css
app/src/utils/: argBuilder.ts  cipher.ts  constants.ts  zkProofVerifier.ts
artifacts/: circuits_hash.txt
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: execute.rs  lib.rs  tally.rs
programs/covenant/: Cargo.toml
programs/covenant/src/: errors.rs  lib.rs  state.rs
programs/covenant/src/instructions/: commit_to_proposal.rs  create_community.rs  create_proposal.rs  execute_commitments.rs  finalize_proposal.rs  join_community.rs  leave_community.rs  mod.rs  voting_closes.rs
scripts/: copy-idl.mjs  finalize-circuits.mjs  init-comp-defs.mjs  test-e2e.ts  upload-circuits.mjs  verify-onchain.js
(+3 files in other folders)
