[package]
name = "covenant"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "covenant"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang   = { version = "0.32.1", features = ["init-if-needed"] }
arcium-anchor = { version = "=0.9.6" }
arcium-macros = { version = "=0.9.6" }
arcium-client = { version = "=0.9.6", default-features = false }
anchor-spl    = { version = "0.32.1", features = ["token"] }

[target.'cfg(not(target_os = "solana"))'.lints.rust]
unexpected_cfgs = { level = "allow" }
